# voice-assistant-rust

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: cargo-shear.yml  ci.yml
src/: audio.rs  audio_resampler.rs  command_executor.rs  command_grammar.pest  human_format.rs  main.rs  speech.rs  speech_listener.rs  speech_to_text.rs  tts_client.rs
src/command_executor/: command_grammar.pest  config.rs  executor.rs  grammar.rs  mod.rs
src/command_executor/services/: home_assistant.rs  mod.rs  timer.rs  weather.rs
tts-processor/: Cargo.toml
tts-processor/src/: lib.rs  main.rs
