[package]
name = "voice-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive", "env"] }
color-eyre = "0.6.5"
cpal = "0.17.1"
hound = "3.5.1"
pocket-tts = { version = "0.3.1" }
rodio = "0.21.1"
tts-processor = { path = "tts-processor" }
oww-rs = { path = "oww_rs" }
voice_activity_detector = "0.2.1"
whisper-rs = "0.15.1"
oneshot = "0.1.13"
reqwest = { version = "0.13.1", features = ["blocking"] }
url = "2.5.8"
secrecy = "0.10.3"
serde_json = "1.0.149"
pest = "2.8.6"
pest_derive = "2.8.6"
